# shm_image_save

./: .gitignore  CMakeLists.txt  README.md  nodelet_description.xml  package.xml
include/shm_image_save/: cam_shm.h  plugin_nodelet_shm_saver.h  shmem.h
launch/: realsense.launch
scripts/: img.py  shm.py
src/: cam_shm.cpp  plugin_nodelet_shm_saver.cpp  shmem.cpp
